// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> closeModal should close the modal when the request was approved 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
    >
      <div
        class="sc-bxivhb hkfQrY"
        style="max-height: 100;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> closeModal should close the modal when there is no onRequestClose callback 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
    >
      <div
        class="sc-bxivhb hkfQrY"
        style="max-height: 100;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should not render the modal if it is closed 1`] = `<div />`;

exports[`<Modal /> render should render with actionBar and bottomActionBar 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
    >
      <div
        class="sc-htpNat gYdIYG"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-bxivhb hkfQrY"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-ifAKCX fQNkTf"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render without errors and pass extra props 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
      style="width: 210px;"
    >
      <div
        class="sc-bxivhb hkfQrY"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should recalculate shadows and content height on props change 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
    >
      <div
        class="sc-bxivhb hkfQrY"
        style="max-height: 100;"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should set bottom action bar shadow when the content was scrolled 1`] = `
<div>
  <div
    class="sc-EHOje container--overlay czzgRX"
  >
    <div
      class="sc-bwzfXH iqdfeW sc-bdVaJa hPYopS"
    >
      <div
        class="sc-bxivhb hkfQrY"
        style="max-height: 100;"
      >
        <div
          data-testid="content"
        >
          Modal contents
        </div>
      </div>
      <div
        class="sc-ifAKCX fQNkTf"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
